# DiMs

./: README.md  allure-report.sh  build.gradle.kts  detekt.yml  get-tracing-data.sh  index.html  settings.gradle.kts
.github/workflows/: ci.yml
21/: index.html
21/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
21/export/: influxDbData.txt  prometheusData.txt
21/history/: duration-trend.json  history-trend.json  history.json
21/widgets/: executors.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
22/: index.html
22/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
22/export/: influxDbData.txt  prometheusData.txt
22/history/: duration-trend.json  history.json
22/widgets/: categories-trend.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
34/: index.html
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
benchmark/: build.gradle.kts
core/: build.gradle.kts
data/: build.gradle.kts
domain/: build.gradle.kts
generatorReport/: build.gradle.kts
gradle/: libs.versions.toml
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
logger/: build.gradle.kts
presenter/: build.gradle.kts
ui/: build.gradle.kts
(+3105 files in other folders)
